menue navigation list gap fixed

--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ body {
 .mobile-menue-link {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  margin-top: 5rem;
+  gap: 0.5rem;
+  margin-top: 4rem;
   margin-left: 2rem;
   font-size: 1.9rem;
 }
